# academy-flowcept

./: .gitignore  README.md  fibiterate7.py  fibiterate7lib.py  flowcepthandler.py  pyproject.toml
tests/: test_flowcepthandler.py
